--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "element-ui": "^2.4.11",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
+    "echarts": "^4.2.1",
+    "element-ui": "^2.4.11",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
