--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@nuxtjs/pwa": "^2.6.0",
     "echarts": "^4.2.1",
     "element-ui": "^2.4.11",
+    "jquery": "^3.4.1",
+    "jquery-ui": "^1.12.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
