--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "element-ui": "^2.4.11",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-amap": "^0.5.10"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
